--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header role="banner">
-      <h1><a href="index.html">Cascade <img class="mtn-icn" src="https://www.fb.pics/img/2018/04/25/mountains.png"/> Quiz</a></h1>
+      <h1><a href="index.html">Cascade <img class="mtn-icn" src="https://www.fb.pics/img/2018/04/25/mountains.png"/ alt="mountain icon"> Quiz</a></h1>
     </header>
     <main role="main">
       <section class="container" data-question="0" data-score="0" role="region">
